--- a/foundations/intro-to-css/02-class-id-selectors/style.css
+++ b/foundations/intro-to-css/02-class-id-selectors/style.css
@@ -3,15 +3,15 @@ p{
     font-family: Verdana, "Dejavu Sans", sans-serif;
 }
 
-.second{
+#second{
     color: Blue;
     font-size: 36px;
 }
 
-.third, .fourth{
+.adjust-font, #fourth{
     font-size: 24px;
 }
-.fourth{
+#fourth{
     background: rgb(117, 239, 117);
     font-weight: bold;
 }
