--- a/foundations/flex/06-flex-layout/style.css
+++ b/foundations/flex/06-flex-layout/style.css
@@ -1,10 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 
+*{
+  box-sizing: border-box;
+  margin: 0px;
+  padding: 0px;
+}
 body {
   height: 100vh;
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+  display: flex;
+  flex-direction: column;
 }
 
 img {
@@ -23,4 +30,37 @@ input {
   border-radius: 16px;
   padding: 8px 24px;
   width: 400px;
+}
+.header, .footer{
+  padding: 16px;
+  display: flex;
+  justify-content: space-between;
+}
+.left-links, .right-links{
+  display: flex;
+  gap: 24px;
+  list-style: none;
+}
+a{
+  color:#666;
+  text-decoration: none;
+}
+.content{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  flex : 1;
+}
+.footer{
+  background-color: #eee;
+}
+.buttons{
+  display: flex;
+  gap: 8px;
+  margin-top: 16px;
+}
+.buttons button{
+  padding: 10px;
 }
