--- a/foundations/flex/07-flex-layout-2/style.css
+++ b/foundations/flex/07-flex-layout-2/style.css
@@ -1,19 +1,30 @@
+*{
+  box-sizing: border-box;
+  margin: 0px;
+  padding: 0px;
+}
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
   min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
 
 .header {
   height: 72px;
   background: darkmagenta;
   color: white;
-}
+  font-weight: 900;
+  padding: 16px;
+  }
 
 .footer {
   height: 72px;
   background: #eee;
   color: darkmagenta;
+  text-align: center;
+  padding: 24px;
 }
 
 .sidebar {
@@ -23,7 +34,39 @@ body {
 }
 
 .card {
+  height: auto;
   border: 1px solid #eee;
   box-shadow: 2px 4px 16px rgba(0,0,0,.06);
   border-radius: 4px;
+  max-width: 400px;
+  min-width: 300px;
+  padding: 16px;
+  border-radius: 10px;
+}
+.content{
+  flex: 1;
+  display: flex;
+}
+.sidebar{
+  flex-shrink: 0;
+}
+.card-container{
+  margin: 32px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 24px;
+}
+.sidebar ul{
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+ul li{
+  list-style: none;
+}
+a{
+  text-decoration: none;
+  color: whitesmoke;
+  font-weight: 700;
 }
