--- a/intermediate-html-css/positioning-grid/01-basic-holy-grail/style.css
+++ b/intermediate-html-css/positioning-grid/01-basic-holy-grail/style.css
@@ -9,6 +9,9 @@ html {
   height: 100%;
   padding: 16px;
   box-sizing: border-box;
+  display: grid;
+  grid-template: repeat(8, 1fr)/repeat(4, 1fr);
+  gap: 15px;
 }
 
 .container div {
@@ -22,22 +25,27 @@ html {
 
 .header {
   background-color: #006157;
+  grid-area: 1/1/2/5;
 }
 
 .sidebar {
+  grid-area: 2/1/8/2;
   background-color: #005B94;
 }
 
 .nav {
+  grid-area: 2/2/3/5;
   background-color: #642cde;
 }
 
 .article {
+  grid-area: 3/2/8/5;
   background-color: #7E1DC3;
 }
 
 .footer {
   background-color: #393f4d;
+  grid-area: 8/1/9/5
 }
 
 .article p {
