--- a/intermediate-html-css/advanced-grid/01-responsive-holy-grail/style.css
+++ b/intermediate-html-css/advanced-grid/01-responsive-holy-grail/style.css
@@ -1,6 +1,6 @@
 body,
 html {
-  height: 100%;
+  height: 100vh;
   margin: 0;
 }
 
@@ -9,6 +9,9 @@ html {
   height: 100%;
   padding: 16px;
   box-sizing: border-box;
+  display: grid;
+  gap: 15px;
+  grid-template: repeat(2, 1fr) 50% 1fr/1fr 75%;
 }
 
 .container div {
@@ -22,20 +25,22 @@ html {
 
 .header {
   background-color: #006157;
-  grid-column: 1 / 3;
+  grid-column: 1/3;
 }
 
 .sidebar {
   background-color: #005B94;
-  grid-row: 2 / 4;
+  grid-area: 2/1/5/2;
 }
 
 .nav {
   background-color: #642cde;
+  grid-column: 2/3repeat(9, 1fr) / repeat(4, 1fr);;
 }
 
 .article {
   background-color: #7E1DC3;
+  grid-area: 3/2/5/3;
 }
 
 .article p {
@@ -47,5 +52,5 @@ html {
 
 .footer {
   background-color: #393f4d;
-  grid-column: 1 / 3;
+  grid-column: 1/3;
 }
