--- a/intermediate-html-css/advanced-grid/01-responsive-holy-grail/style.css
+++ b/intermediate-html-css/advanced-grid/01-responsive-holy-grail/style.css
@@ -11,7 +11,7 @@ html {
   box-sizing: border-box;
   display: grid;
   gap: 15px;
-  grid-template: repeat(2, 1fr) 50% 1fr/1fr 75%;
+  grid-template: 1fr 1fr 5fr 1fr/ 1fr 3fr;
 }
 
 .container div {
