--- a/intermediate-html-css/advanced-grid/02-holy-grail-mockup/style.css
+++ b/intermediate-html-css/advanced-grid/02-holy-grail-mockup/style.css
@@ -89,3 +89,43 @@
   font-size: 13px;
   font-weight: normal;
 }
+.container{
+  width: 100%;
+  display: grid;
+  grid-template-columns: 1/4;
+  gap: 4px;
+}
+.header{
+  display: grid;
+  grid-auto-flow: column;
+  grid-column: 1/3;
+}
+ul{
+  list-style: none;
+  display: grid;
+  grid-auto-flow: column;
+}
+.sidebar{
+  grid-row: 2/4;
+  display: grid;
+  grid-template-rows: repeat(4, 1fr);
+  gap: 50px;
+}
+.nav{
+  grid-column: 2/3
+}
+.article{
+  display: grid;
+  gap: 15px;
+  grid-row: 3/4 ;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+}
+.footer{
+  grid-column: 1/3
+}
+.card{
+  height: 200px
+}
+.card p{
+  padding: 5px;
+}
